tests/miniJava/pos/001051_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) { } else System.out.println ( { } ) ; } }
