tests/miniJava/neg/006673_mutation.MiniJava
class java { public static void Main this String [ ] java ) { { } } }
